--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
   "dependencies": {
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^6.0.0",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "machine_learning": "^0.1.1",
-    "morgan": "~1.9.0"
+    "moment": "^2.22.2",
+    "mongoose": "^5.1.4",
+    "morgan": "~1.9.0",
+    "node-cron": "^1.2.1",
+    "request": "^2.87.0"
   }
 }
